sonar: link to our git, and specify the C/C++ versions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,8 @@ sonar.projectName=SimGrid
 sonar.projectVersion=3.13.90
 
 sonar.links.homepage=http://simgrid.org
-sonar.links.issue=http://github.com/simgrid/simgrid/issues
+sonar.links.issue=https://github.com/simgrid/simgrid/issues
+sonar.links.scm=https://github.com/simgrid/simgrid.git
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src,examples,include,teshsuite
@@ -26,6 +27,9 @@ sonar.cfamily.build-wrapper-output=bw-outputs
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
+
+sonar.cpp.std=gnu++11
+sonar.c.std=gnu11
 
 # Talk to me (travis don't like it, it's too much)
 # sonar.verbose=true
