disable the logging mechanism when doing SonarQube analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -31,5 +31,8 @@ sonar.sourceEncoding=UTF-8
 sonar.cpp.std=gnu++11
 sonar.c.std=gnu11
 
+# Disable the whole logging mechanism during SonarQube analysis
+sonar.cfamily.predefinedMacros=XBT_LOG_MAYDAY
+
 # Talk to me (travis don't like it, it's too much)
 # sonar.verbose=true
