--- a/examples/s4u/CMakeLists.txt
+++ b/examples/s4u/CMakeLists.txt
@@ -11,7 +11,14 @@ add_executable       (s4u_basic_function  basic/s4u_basic_function.cpp)
 target_link_libraries(s4u_basic_function  simgrid)
 set_target_properties(s4u_basic_function  PROPERTIES RUNTIME_OUTPUT_DIRECTORY
  ${CMAKE_CURRENT_BINARY_DIR}/basic)
+
+add_executable       (s4u_basic_deployment  basic/s4u_basic_deployment.cpp)
+target_link_libraries(s4u_basic_deployment  simgrid)
+set_target_properties(s4u_basic_deployment  PROPERTIES RUNTIME_OUTPUT_DIRECTORY
+ ${CMAKE_CURRENT_BINARY_DIR}/basic)
+
 set(examples_src  ${examples_src}  ${CMAKE_CURRENT_SOURCE_DIR}/basic/s4u_basic_function.cpp
+                                   ${CMAKE_CURRENT_SOURCE_DIR}/basic/s4u_basic_deployment.cpp
                                    ${CMAKE_CURRENT_SOURCE_DIR}/basic/s4u_basic.h)
 
 set(examples_src  ${examples_src}                                     PARENT_SCOPE)
