--- a/.gitignore
+++ b/.gitignore
@@ -180,8 +180,12 @@ examples/msg/trace-masterworker/trace-masterworker
 examples/msg/trace-process-migration/trace-process-migration
 examples/msg/trace-platform/trace-platform
 examples/msg/trace-host-user-variables/trace-host-user-variables
+examples/s4u/actions-comm/s4u_actions-comm
 examples/s4u/basic/s4u_basic
+examples/s4u/basic/s4u_basic_deployment
+examples/s4u/basic/s4u_basic_function
 examples/s4u/io/s4u_io
+examples/s4u/mutex/s4u_mutex
 examples/simdag/daxload/sd_daxload
 examples/simdag/dag-dotload/sd_dag-dotload
 examples/simdag/ptg-dotload/sd_ptg-dotload
