crude integration of the process switching documentation

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -662,6 +662,7 @@ INPUT                  = doxygen/index.doc \
                          doxygen/tutorial.doc \
                          doxygen/examples.doc \
  			 doxygen/uhood.doc \
+ 			   doxygen/uhood_switch.doc \
 			   doxygen/inside.doc \
 			     doxygen/inside_doxygen.doc \
 			     doxygen/inside_extending.doc \
