tell sonar we're using Java 7 at least

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -39,6 +39,7 @@ sonar.sourceEncoding=UTF-8
 
 sonar.cpp.std=gnu++11
 sonar.c.std=gnu11
+sonar.java.source=7
 
 # Disable the whole logging mechanism during SonarQube analysis
 sonar.cfamily.predefinedMacros=XBT_LOG_MAYDAY
