--- a/src/simix/simcalls.in
+++ b/src/simix/simcalls.in
@@ -52,12 +52,11 @@ int  process_is_suspended(smx_process_t process) [[nohandler]];
 int  process_join(smx_process_t process, double timeout) [[block]];
 int  process_sleep(double duration) [[block]];
 
-smx_activity_t execution_start(const char* name, double flops_amount, double priority, double bound, unsigned long affinity_mask);
+smx_activity_t execution_start(const char* name, double flops_amount, double priority, double bound);
 smx_activity_t execution_parallel_start(const char* name, int host_nb, sg_host_t* host_list, double* flops_amount, double* bytes_amount, double amount, double rate) [[nohandler]];
 void          execution_cancel(smx_activity_t execution) [[nohandler]];
 void          execution_set_priority(smx_activity_t execution, double priority) [[nohandler]];
 void          execution_set_bound(smx_activity_t execution, double bound) [[nohandler]];
-void          execution_set_affinity(smx_activity_t execution, sg_host_t ws, unsigned long mask) [[nohandler]];
 int           execution_wait(smx_activity_t execution) [[block]];
 
 void          process_on_exit(smx_process_t process, int_f_pvoid_pvoid_t fun, void* data) [[nohandler]];
