rename the basic s4u example to 'launching'

--- a/examples/s4u/CMakeLists.txt
+++ b/examples/s4u/CMakeLists.txt
@@ -1,4 +1,4 @@
-foreach (example basic io mutex actions-comm)
+foreach (example io launching mutex actions-comm)
   add_executable       (s4u_${example}  ${example}/s4u_${example}.cpp)
   target_link_libraries(s4u_${example}  simgrid)
   set_target_properties(s4u_${example}  PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${example})
@@ -7,23 +7,23 @@ foreach (example basic io mutex actions-comm)
   set(examples_src  ${examples_src}  ${CMAKE_CURRENT_SOURCE_DIR}/${example}/s4u_${example}.cpp)
 endforeach()
 
-add_executable       (s4u_basic_function  basic/s4u_basic_function.cpp)
-target_link_libraries(s4u_basic_function  simgrid)
-set_target_properties(s4u_basic_function  PROPERTIES RUNTIME_OUTPUT_DIRECTORY
- ${CMAKE_CURRENT_BINARY_DIR}/basic)
+add_executable       (s4u_launching_function  launching/s4u_launching_function.cpp)
+target_link_libraries(s4u_launching_function  simgrid)
+set_target_properties(s4u_launching_function  PROPERTIES RUNTIME_OUTPUT_DIRECTORY
+ ${CMAKE_CURRENT_BINARY_DIR}/launching)
 
-add_executable       (s4u_basic_deployment  basic/s4u_basic_deployment.cpp)
-target_link_libraries(s4u_basic_deployment  simgrid)
-set_target_properties(s4u_basic_deployment  PROPERTIES RUNTIME_OUTPUT_DIRECTORY
- ${CMAKE_CURRENT_BINARY_DIR}/basic)
+add_executable       (s4u_launching_deployment  launching/s4u_launching_deployment.cpp)
+target_link_libraries(s4u_launching_deployment  simgrid)
+set_target_properties(s4u_launching_deployment  PROPERTIES RUNTIME_OUTPUT_DIRECTORY
+ ${CMAKE_CURRENT_BINARY_DIR}/launching)
 
-set(examples_src  ${examples_src}  ${CMAKE_CURRENT_SOURCE_DIR}/basic/s4u_basic_function.cpp
-                                   ${CMAKE_CURRENT_SOURCE_DIR}/basic/s4u_basic_deployment.cpp
-                                   ${CMAKE_CURRENT_SOURCE_DIR}/basic/s4u_basic.h)
+set(examples_src  ${examples_src}  ${CMAKE_CURRENT_SOURCE_DIR}/launching/s4u_launching_function.cpp
+                                   ${CMAKE_CURRENT_SOURCE_DIR}/launching/s4u_launching_deployment.cpp
+                                   ${CMAKE_CURRENT_SOURCE_DIR}/launching/s4u_launching.h)
 
 set(examples_src  ${examples_src}                                     PARENT_SCOPE)
 set(tesh_files    ${tesh_files}                                       PARENT_SCOPE)
-set(xml_files     ${xml_files}    ${CMAKE_CURRENT_SOURCE_DIR}/basic/deployment.xml
+set(xml_files     ${xml_files}    ${CMAKE_CURRENT_SOURCE_DIR}/launching/deployment.xml
                                   ${CMAKE_CURRENT_SOURCE_DIR}/actions-comm/s4u_actions-comm_split_d.xml
                                   ${CMAKE_CURRENT_SOURCE_DIR}/actions-comm/s4u_actions-comm_d.xml         PARENT_SCOPE)
 set(txt_files     ${txt_files}    ${CMAKE_CURRENT_SOURCE_DIR}/actions-comm/s4u_actions-comm_split_p0.txt
@@ -31,6 +31,6 @@ set(txt_files     ${txt_files}    ${CMAKE_CURRENT_SOURCE_DIR}/actions-comm/s4u_a
                                   ${CMAKE_CURRENT_SOURCE_DIR}/actions-comm/s4u_actions-comm.txt
                                   ${CMAKE_CURRENT_SOURCE_DIR}/README.doc                                   PARENT_SCOPE)
 
-foreach(example basic io mutex actions-comm)
+foreach(example io launching mutex actions-comm)
   ADD_TESH_FACTORIES(s4u-${example} "thread;ucontext;raw;boost" --setenv bindir=${CMAKE_CURRENT_BINARY_DIR}/${example} --setenv srcdir=${CMAKE_HOME_DIRECTORY}/examples/platforms --cd ${CMAKE_HOME_DIRECTORY}/examples/s4u/${example} s4u_${example}.tesh)
 endforeach()
