activate global privatization by default in smpi

--- a/src/smpi/smpirun.in
+++ b/src/smpi/smpirun.in
@@ -1,7 +1,6 @@
 #! /bin/sh
 
-# Copyright (c) 2007-2015. The SimGrid Team.
-# All rights reserved.
+# Copyright (c) 2007-2016, The SimGrid Team. All rights reserved.
 
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of the license (GNU LGPL) which comes with this package.
@@ -24,6 +23,8 @@ NETWORK_BANDWIDTH="${DEFAULT_NETWORK_BANDWIDTH}"
 NETWORK_LATENCY="${DEFAULT_NETWORK_LATENCY}"
 SPEED="${DEFAULT_SPEED}"
 
+PRIVATIZE="--cfg=smpi/privatize-global-variables:yes"
+
 SIMOPTS="--cfg=surf/precision:1e-9 --cfg=network/model:SMPI --cfg=network/TCP-gamma:4194304"
 
 #usage to print the way this script should be called
@@ -36,6 +37,7 @@ Options:
   -map                       # display the machine on which each process rank is mapped
   -np <numprocs>             # use that amount of processes from the hostfile.
                              # By default, all processes of the hostfile are used.
+  -no-privatize              # Disable the globals privatization, that is activated by default
   -trace-ti                  # activate time independant tracing (for replay, default in smpi_simgrid.txt)
   -trace                     # activate tracing (Paje, default in smpi_simgrid.trace)
   -trace-comment <comment>   # put a comment on the top of the trace file
@@ -159,6 +161,10 @@ while true; do
             EXTOPT="$2"
             shift 2
             ;;
+	"-no-privatize")
+	    PRIVATIZE=""
+	    shift 1
+	    ;;
         "-map")
 	    MAPOPT="true"
             shift 1
@@ -476,7 +482,7 @@ fi
 
 export SMPI_GLOBAL_SIZE=${NUMPROCS}
 if [ -n "${KEEP}" ] ; then
-    echo ${EXEC} ${TRACEOPTIONS} ${SIMOPTS} ${PLATFORMTMP} ${APPLICATIONTMP}
+    echo ${EXEC} ${TRACEOPTIONS} ${SIMOPTS} ${PRIVATIZE} ${PLATFORMTMP} ${APPLICATIONTMP}
     if [ ${HOSTFILETMP} = 1 ] ; then
         echo "Generated hostfile ${HOSTFILE} kept."
     fi
