--- a/examples/java/.classpath
+++ b/examples/java/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry excluding="**/*.cmake|**/*.tesh|**/*_compiled|**/*~|**/CMakeFiles|**/Makefile" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="../../simgrid.jar" sourcepath="../..//src/bindings/java"/>
+	<classpathentry kind="lib" path="../../simgrid.jar" sourcepath="../../src/bindings/java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
